# FirestormWoD

./: .dockerignore  .drone.yml  .gitattributes  .gitignore  .gitmodules  .merge_file_a05748  .merge_file_a06032  .merge_file_a07072  .merge_file_a07172  .merge_file_a07176  .merge_file_a07356  .merge_file_a07496  .merge_file_a07548  .merge_file_a07644  .merge_file_a07704  .merge_file_a07968  .merge_file_a08160  .merge_file_a08188  .travis.yml  CMakeLists.txt  Dockerfile  Garrison triple coord tranformation.txt  PreLoad.cmake  README.md  cppcheck_performance_out.xml  pull_request_template.md  revision.h.in.cmake  revision_data.h.in.cmake
dep/: CMakeLists.txt  PackageList.txt
dep/CascLib/: CMakeLists.txt
dep/SFMT/: SFMT.h
dep/acelite/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt  Functor_T.inl
dep/boost/boost/graph/: dijkstra_shortest_paths.hpp
dep/boost/boost/type_traits/: common_type.hpp
dep/bzip2/: CMakeLists.txt
dep/curl/include/curl/: curl.h
dep/curl/lib/: libcurl_a.lib
dep/curl/lib/dll-debug-x86/: libcurl_debug.lib
dep/g3dlite/: CMakeLists.txt
dep/g3dlite/include/G3D/: Ray.h
dep/g3dlite/source/: Any.cpp  BinaryInput.cpp  GThread.cpp  TextInput.cpp  stringutils.cpp
dep/gsoap/: CMakeLists.txt  soapC.cpp  stdsoap2.cpp
dep/jemalloc/: CMakeLists.txt
dep/mysqllite/: CMakeLists.txt  config.h
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Detour/Include/: DetourNavMesh.h
dep/recastnavigation/Detour/Source/: DetourNavMesh.cpp  DetourNavMeshBuilder.cpp  DetourNavMeshQuery.cpp
dep/recastnavigation/Recast/: CMakeLists.txt
dep/recastnavigation/Recast/Source/: RecastMeshDetail.cpp
dep/valgrind/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist
src/server/authserver/Authentication/: AuthCodes.h  TOTP.cpp  TOTP.h
src/server/authserver/Bnet2/: AuthComponent.cpp  AuthResult.hpp  BNet2Crypt.cpp  BNet2Crypt.hpp  Channel.hpp  Module.cpp  Module.hpp  Opcode.hpp  Packet.cpp  Packet.hpp  SRP6a.cpp  SRP6a.hpp  Session.cpp  Session.hpp
src/server/authserver/Realms/: RealmList.cpp
src/server/authserver/Server/: AuthSocket.cpp  AuthSocket.h  RealmAcceptor.h  RealmSocket.cpp
src/server/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  DynamicTree.h  RegularGrid.h  VMapDefinitions.h  VMapTools.h
src/server/collision/Management/: IVMapManager.h  MMapFactory.cpp  MMapFactory.h  MMapManager.cpp  MMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/server/collision/Maps/: MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/server/collision/Models/: GameObjectModel.cpp  GameObjectModel.h  ModelInstance.cpp  ModelInstance.h  WorldModel.cpp  WorldModel.h
src/server/collision/Pathfinding/: PathFactory.cpp  PathFactory.h  PathInfo.cpp  PathInfo.h  PathManager.cpp  PathManager.h
src/server/collision/PrecompiledHeaders/: collisionPCH.h
src/server/database/: CMakeLists.txt
src/server/database/Database/: DatabaseEnv.h  Field.h  MySQLThreading.h
src/server/database/Logging/: AppenderConsole.cpp  Log.cpp  LogOperation.cpp  Reporter.cpp
src/server/database/PrecompiledHeaders/: databasePCH.h
src/server/game/: CMakeLists.txt
src/server/game/AI/: CreatureAI.cpp  CreatureAI.h  CreatureAIFactory.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/Addons/: AddonMgr.cpp  AddonMgr.h
src/server/game/Anticheat/: AnticheatData.cpp  AnticheatData.h  AnticheatMgr.cpp  AnticheatMgr.h  AnticheatScripts.cpp  AnticheatScripts.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/BattlePay/: BattlepayMgr.cpp  BattlepayMgr.h  BattlepayPacketFactory.cpp  BattlepayPacketFactory.h
src/server/game/BattlePet/: BattlePetMgr.cpp  BattlePetMgr.h
src/server/game/Battlefield/: Battlefield.cpp  Battlefield.h  BattlefieldHandler.cpp  BattlefieldMgr.cpp  BattlefieldMgr.h
src/server/game/Battlegrounds/: Arena.h  ArenaTeam.cpp  Battleground.cpp  Battleground.h  BattlegroundInvitationsMgr.cpp  BattlegroundInvitationsMgr.hpp  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundMgr.hpp  BattlegroundPacketFactory.hpp  BattlegroundQueue.cpp  BattlegroundQueue.h  BattlegroundScheduler.cpp  BattlegroundScheduler.hpp
src/server/game/BlackMarket/: BlackMarketMgr.cpp  BlackMarketMgr.h
src/server/game/Calendar/: CalendarMgr.cpp  CalendarMgr.h
src/server/game/Chat/: Chat.cpp  Chat.h  ChatLexicsCutter.cpp  ChatLexicsCutter.h  ChatLink.cpp  ChatLink.h
src/server/game/Cinematic/: CinematicPathMgr.cpp  CinematicPathMgr.h
src/server/game/Combat/: HostileRefManager.cpp  HostileRefManager.h  ThreatManager.cpp  ThreatManager.h  UnitEvents.h
src/server/game/Conditions/: ConditionMgr.cpp  ConditionMgr.h  (+2 more)
src/server/scripts/: CMakeLists.txt
src/server/shared/: AutoPtr.h  CMakeLists.txt  Common.cpp  Common.h  Containers.h  Define.h  GitRevision.cpp  GitRevision.h  Guid.cpp  Guid.h  Memory.h  Revision.cpp
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  worldserver.conf.dist  worldserver.rc
src/tools/map_extractor/: CMakeLists.txt  System.cpp  adt.cpp  adt.h  dbcfile.cpp  dbcfile.h  loadlib.cpp  loadlib.h  wdt.cpp  wdt.h
src/tools/mmaps_generator/: CMakeLists.txt  IntermediateValues.cpp  IntermediateValues.h  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h
src/tools/vmap4_assembler/: CMakeLists.txt  VMapAssembler.cpp
src/tools/vmap4_extractor/: CMakeLists.txt  adtfile.cpp  adtfile.h  dbcfile.cpp  dbcfile.h  gameobject_extract.cpp  model.cpp  model.h  modelheaders.h  mpqfile.cpp  mpqfile.h  vec3d.h  vmapexport.cpp  vmapexport.h  wdtfile.cpp  wdtfile.h  wmo.cpp  wmo.h
(+6225 files in other folders)
